--- a/sample/src/samples/autocomplete/api.html
+++ b/sample/src/samples/autocomplete/api.html
@@ -7,8 +7,7 @@
       <div class="demo-section k-content">
         <p><strong>Pick a color:</strong></p>
         <p>
-            <input k-autocomplete="k-data-source.bind: items;"
-                   k-autocomplete.ref="autocomplete"
+            <input k-autocomplete="k-data-source.bind: items; k-widget.two-way: autocomplete"
                    style="width: 100%;">
         </p>
         <p class="demo-hint">Hint: type "red"</p>
