--- a/sample/src/samples/progressbar/api.html
+++ b/sample/src/samples/progressbar/api.html
@@ -2,8 +2,11 @@
   <div id="example">
     <div id="progressbar-api">
       <div class="demo-section k-content">
-        <div k-progress-bar="k-min: 0; k-max: 100; k-type: value; k-animation.bind: {duration: 400}"
-             k-progress-bar.ref="pb"
+        <div k-progress-bar="k-min: 0;
+                             k-max: 100;
+                             k-type: value;
+                             k-animation.bind: {duration: 400};
+                             k-widget.bind: pb"
              style="width: 100%;"></div>
       </div>
       <div class="box wide">
