--- a/sample/src/samples/progressbar/chunk-progressbar.html
+++ b/sample/src/samples/progressbar/chunk-progressbar.html
@@ -9,7 +9,8 @@
                                k-chunk-count: 5;
                                k-min: 0;
                                k-max: 5;
-                               k-value: 2" k-progress-bar.ref="pb"></div>
+                               k-value: 2;
+                               k-widget.bind: pb"></div>
 
           <ul class="forms">
               <li>
