--- a/sample/src/samples/slider/api.html
+++ b/sample/src/samples/slider/api.html
@@ -5,7 +5,7 @@
         <ul id="fieldlist">
           <li>
             <label>Temperature</label>
-            <input k-slider k-slider.ref="slider" class="temperature" />
+            <input k-slider="k-widget.two-way: slider" class="temperature" />
           </li>
         </ul>
       </div>
