--- a/sample/src/samples/datepicker/range-selection.html
+++ b/sample/src/samples/datepicker/range-selection.html
@@ -2,10 +2,18 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Start date:</h4>
-            <input k-datepicker="k-value.bind : '10/10/2011'" k-on-change.delegate="startChange()" id="start" style="width: 100%;" k-datepicker.ref="startDatePicker"/>
+            <input k-datepicker="k-value.bind : '10/10/2011';
+                                 k-widget.two-way: startDatePicker"
+                   k-on-change.delegate="startChange()"
+                   id="start"
+                   style="width: 100%;"/>
 
             <h4 style="margin-top: 2em">End date:</h4>
-            <input id="end" style="width: 100%;" k-datepicker="k-value.bind : '10/10/2012'" k-on-change.delegate="endChange()"  k-datepicker.ref="endDatePicker"/>
+            <input id="end"
+                   style="width: 100%;"
+                   k-datepicker="k-value.bind : '10/10/2012';
+                                 k-widget.two-way: endDatePicker"
+                   k-on-change.delegate="endChange()"/>
         </div>
     </div>
 </template>
