fix(samples): progress bar

--- a/sample/src/samples/progressbar/custom-label.html
+++ b/sample/src/samples/progressbar/custom-label.html
@@ -12,8 +12,8 @@
                   <label>Password strength</label>
                   <div k-progress-bar="k-type: value;
                                        k-max: 9;
-                                       k-animation.bind: false;
-                                       k-widget.bind: pb"
+                                       k-animation.bind: false"
+                       k-progress-bar.ref="pbWrapper"
                        k-on-change.delegate="onChange($event.detail)"
                        style="width: 100%;">
                   </div>
