--- a/sample/src/samples/numerictextbox/events.html
+++ b/sample/src/samples/numerictextbox/events.html
@@ -3,10 +3,9 @@
 
         <div class="demo-section k-content">
             <h4>Set value</h4>
-            <input id="numerictextbox" k-numerictextbox 
+            <input id="numerictextbox" k-numerictextbox="k-widget.two-way: numerictextbox" 
                                        k-on-change.delegate="onChange()"
                                        k-on-spin.delegate="onSpin()"
-                                       k-numerictextbox.ref="numerictextbox"
                                        style="width: 100%;" />
         </div>
 
