refactor(rename): rename plugin to bridge

--- a/sample/src/installation/index.html
+++ b/sample/src/installation/index.html
@@ -1,6 +1,6 @@
 <template>
   <section>
-      <h4>Aurelia-KendoUI bridge installation</h4>
+      <h4>Aurelia-KendoUI-bridge installation</h4>
 
         <div k-tabstrip k-on-select.delegate="tabChanged($event.detail)" k-tabstrip.ref="tabstrip">
           <ul>
