--- a/sample/src/samples/chart/bar-charts/date-axis.html
+++ b/sample/src/samples/chart/bar-charts/date-axis.html
@@ -1,5 +1,5 @@
 <template>
-  <k-chart  view-model.ref="chart"
+  <k-chart  k-widget.bind="chart"
             k-data-source.bind="datasource"
             k-series.bind="series"
             k-category-axis.bind="categoryAxis"
