--- a/sample/src/samples/grid/batch-editing.html
+++ b/sample/src/samples/grid/batch-editing.html
@@ -4,9 +4,9 @@
           k-navigatable.bind="true"
           k-toolbar.bind="['create', 'save', 'cancel']"
           k-editable.bind="true">
-    <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120"></au-col>
-    <au-col field="UnitsInStock" title="Units In Stock" width.bind="120"></au-col>
-    <au-col field="Discontinued" width.bind="120"></au-col>
-    <au-col command="destroy" title="&nbsp;" width.bind="150"></au-col>
+    <k-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120"></k-col>
+    <k-col field="UnitsInStock" title="Units In Stock" width.bind="120"></k-col>
+    <k-col field="Discontinued" width.bind="120"></k-col>
+    <k-col command="destroy" title="&nbsp;" width.bind="150"></k-col>
   </k-grid>
 </template>
