--- a/sample/src/samples/grid/binding-to-local-data.html
+++ b/sample/src/samples/grid/binding-to-local-data.html
@@ -4,9 +4,9 @@
           k-filterable.bind="true" 
           k-sortable.bind="true" 
           k-scrollable.bind="true">
-    <au-col title="ProductName" field="ProductName"></au-col>
-    <au-col title="Unit Price" field="UnitPrice" format="{0:c}" width="130px"></au-col>
-    <au-col title="Units In Stock" field="UnitsInStock" width="130px"></au-col>
-    <au-col field="Discontinued" width="130px"></au-col>
+    <k-col title="ProductName" field="ProductName"></k-col>
+    <k-col title="Unit Price" field="UnitPrice" format="{0:c}" width="130px"></k-col>
+    <k-col title="Units In Stock" field="UnitsInStock" width="130px"></k-col>
+    <k-col field="Discontinued" width="130px"></k-col>
   </k-grid>
 </template>
