--- a/sample/src/samples/grid/binding-to-signalr.html
+++ b/sample/src/samples/grid/binding-to-signalr.html
@@ -5,9 +5,9 @@
           k-sortable.bind="true"
           k-toolbar.bind="['create']"
           k-data-source.bind="dataSource">
-    <au-col field="UnitPrice"></au-col>
-    <au-col field="ProductName"></au-col>
-    <au-col command="destroy" width.bind="150"></au-col>
+    <k-col field="UnitPrice"></k-col>
+    <k-col field="ProductName"></k-col>
+    <k-col command="destroy" width.bind="150"></k-col>
   </k-grid>
 
   <span ref="notification"></span>
