--- a/sample/src/samples/grid/virtualization-of-remote-data-without-button.html
+++ b/sample/src/samples/grid/virtualization-of-remote-data-without-button.html
@@ -3,11 +3,11 @@
   <br>
   <br>
   <k-grid k-data-source.bind="datasource" k-sortable.bind="true" k-scrollable.bind="{virtual:true}">
-    <au-col title="Order ID" field="OrderID" width.bind="110"></au-col>
-    <au-col title="Customer ID" field="CustomerID" width.bind="130"></au-col>
-    <au-col title="Ship Name" field="ShipName" width.bind="280"></au-col>
-    <au-col title="Ship Address" field="ShipAddress"></au-col>
-    <au-col title="Ship City" field="ShipCity" width.bind="160"></au-col>
-    <au-col title="Ship Country" field="ShipCountry" width.bind="160"></au-col>
+    <k-col title="Order ID" field="OrderID" width.bind="110"></k-col>
+    <k-col title="Customer ID" field="CustomerID" width.bind="130"></k-col>
+    <k-col title="Ship Name" field="ShipName" width.bind="280"></k-col>
+    <k-col title="Ship Address" field="ShipAddress"></k-col>
+    <k-col title="Ship City" field="ShipCity" width.bind="160"></k-col>
+    <k-col title="Ship Country" field="ShipCountry" width.bind="160"></k-col>
   </k-grid>
 </template>
