--- a/sample/src/samples/chart/sparkline/remote-data.html
+++ b/sample/src/samples/chart/sparkline/remote-data.html
@@ -2,8 +2,8 @@
   <div id="example">
     <div class="demo-section k-content wide">
       <k-grid k-data-source.bind="{ data: months }">
-        <au-col title="MONTH" field="name"></au-col>
-        <au-col title="MAX TEMP &deg;C">
+        <k-col title="MONTH" field="name"></k-col>
+        <k-col title="MAX TEMP &deg;C">
           <k-sparkline k-data-source.bind="dataSource"
                        k-series.bind="[{
                          type: 'column',
@@ -12,16 +12,16 @@
                          negativeColor: '\#0099ff'
                        }]">
           </k-sparkline>
-        </au-col>
-        <au-col title="WIND SPEED KM/H">
+        </k-col>
+        <k-col title="WIND SPEED KM/H">
           <k-sparkline k-data-source.bind="dataSource"
                        k-series.bind="[{
                          field: 'Wind',
                          color: '\#5b8f00'
                        }]">
           </k-sparkline>
-        </au-col>
-        <au-col title="RAINFALL MM">
+        </k-col>
+        <k-col title="RAINFALL MM">
           <k-sparkline k-data-source.bind="dataSource"
                        k-series.bind="[{
                          type: 'area',
@@ -29,7 +29,7 @@
                          color: '\#0099ff'
                        }]">
           </k-sparkline>
-        </au-col>
+        </k-col>
       </k-grid>
     </div>
   </div>
