--- a/sample/src/samples/grid/frozen-columns.html
+++ b/sample/src/samples/grid/frozen-columns.html
@@ -7,10 +7,10 @@
           k-filterable.bind="true" 
           k-column-menu.bind="true"
           k-pageable.bind="true">
-    <au-col field="OrderID" title="Order ID" locked.bind="true" lockable.bind="false" width.bind="150"></au-col>
-    <au-col field="ShipCountry" title="Ship Country" width.bind="300"></au-col>
-    <au-col field="ShipCity" title="Ship City" width.bind="300"></au-col>
-    <au-col field="ShipName" title="Ship Name" locked.bind="true" width.bind="300"></au-col>
-    <au-col field="ShipAddress" lockable.bind="false" width.bind="400"></au-col>
+    <k-col field="OrderID" title="Order ID" locked.bind="true" lockable.bind="false" width.bind="150"></k-col>
+    <k-col field="ShipCountry" title="Ship Country" width.bind="300"></k-col>
+    <k-col field="ShipCity" title="Ship City" width.bind="300"></k-col>
+    <k-col field="ShipName" title="Ship Name" locked.bind="true" width.bind="300"></k-col>
+    <k-col field="ShipAddress" lockable.bind="false" width.bind="400"></k-col>
   </k-grid>
 </template>
