--- a/sample/src/samples/grid/popup-editing.html
+++ b/sample/src/samples/grid/popup-editing.html
@@ -1,9 +1,9 @@
 <template>
   <k-grid k-data-source.bind="datasource" k-pageable.bind="true" k-toolbar.bind="['create']" k-editable="popup">
-    <au-col field="ProductName"></au-col>
-    <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></au-col>
-    <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
-    <au-col field="Discontinued" width="120px"></au-col>
-    <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
+    <k-col field="ProductName"></k-col>
+    <k-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></k-col>
+    <k-col field="UnitsInStock" title="Units In Stock" width="120px"></k-col>
+    <k-col field="Discontinued" width="120px"></k-col>
+    <k-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></k-col>
   </k-grid>
 </template>
