--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -21,16 +21,10 @@
             </div>
             <hr> -->
 
-            <!-- Row 1 - 3 columns (images) -->
+            <!-- Row 1 - 1 column (images) -->
             <div class="row">
                 <div class="col-xs-12 col-sm-4">
-                    <img src="images/aurelia-logo-04.png" >
-                </div>
-               <div class="col-xs-12 col-sm-4">
-                    <img src="images/bridge-image-08-low.png" >
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <img src="images/kendo-logo-05.png" >
+                    <img src="images/abk-logo.png" >
                 </div>
             </div>
 
