chore(showcase): added missing bootstrap "row" class to fix showcase page margins

--- a/sample/src/shared/showcase.html
+++ b/sample/src/shared/showcase.html
@@ -3,7 +3,7 @@
     <section>
     <br>
         <h3>${ router.title }</h3>
-        <div>
+        <div class="row">
             <div class="col-md-2">
                 <ul class="k-widget k-reset k-header k-panelbar k-panel">
                     <li repeat.for="row of router.navigation" class="k-item ${ $first ? 'k-first' : '' } ${ $last ? 'k-last' : ''} ">
