--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -26,11 +26,11 @@
            <!-- page content - five columns -->
            <div class="row">
                <div class="col-xs-12 col-sm-2">
-                   MOST POPULAR                                      <br>
+                   MOST POPULAR                                              <br>
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
-                   <a>Editor</a>                            <br>
-                   <a>Scheduler</a>                         <br>
+                   <a>Editor</a>                                             <br>
+                   <a>Scheduler</a>                                          <br>
                    <img src="images/blue.png">
                    <a href="#/samples/bar-charts">Bar Charts</a>             <br>
                    <img src="images/blue.png">
@@ -39,47 +39,49 @@
                    <a href="#/samples/stock">Stock Charts</a>                <br>
                    <img src="images/orange.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
-                   <a>Window</a>                            <br>
-                   <a>Upload</a>                            <br>
+                   <a>Window</a>                                             <br>
+                   <a>Upload</a>                                             <br>
                    <img src="images/blue.png">
-                   <a href="#/samples/treeview">TreeView</a>                          <br>
+                   <a href="#/samples/treeview">TreeView</a>                 <br>
                </div>
 
               <div class="col-xs-12 col-sm-2">
-                   DATA MANAGEMENT                                   <br>
+                   DATA MANAGEMENT                                           <br>
                    <img src="images/blue.png">
                    <a href="#/samples/grid">Grid</a>                         <br>
-                   <a>Spreadsheet</a>                       <br>
-                   <a>Listview</a>                          <br>
-                   <a>Pivot Grid</a>                        <br>
-                   <a>TreeList</a>                          <br>
-                   <a>ScrollView</a>                        <br>
+                   <a>Spreadsheet</a>                                        <br>
+                   <a>Listview</a>                                           <br>
+                   <a>Pivot Grid</a>                                         <br>
+                   <a>TreeList</a>                                           <br>
+                   <a>ScrollView</a>                                         <br>
                    <br>
-                   EDITORS                                           <br>
+                   EDITORS                                                   <br>
                    <img src="images/blue.png">
                    <a href="#/samples/autocomplete">Autocomplete</a>         <br>
-                   <img src="images/orange.png">
-                   <a>ColorPicker</a>                       <br>
-                   <a href="#/samples/combobox">Combobox</a>                  <br>
                    <img src="images/blue.png">
-                   <a href="#/samples/datepicker">DatePicker</a>                        <br>
-                   <a>DateTimePicker</a>                    <br>
+                   <a href="#/samples/colorpicker">ColorPicker</a>           <br>
+                   <a href="#/samples/combobox">Combobox</a>                 <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/datepicker">DatePicker</a>             <br>
+                   <a>DateTimePicker</a>                                     <br>
                    <img src="images/orange.png">
                    <a href="#/samples/dropdownlist">DropDownList</a>         <br>
-                   <a>Editor</a>                            <br>
-                   <a>MaskedTextBox</a>                     <br>
-                   <a>MultiSelect</a>                       <br>
+                   <a>Editor</a>                                             <br>
                    <img src="images/blue.png">
-                   <a href="#/samples/numerictextbox">Numeric TextBox</a>                   <br>
+                   <a href="#/samples/maskedtextbox">MaskedTextBox</a>       <br>
+                   <a>MultiSelect</a>                                        <br>
                    <img src="images/blue.png">
-                   <a href="#/samples/slider">Slider</a>                            <br>
-                   <a>TimePicker</a>                        <br>
-                   <a>Upload</a>                            <br>
-                   <a>Switch</a>                            <br>
+                   <a href="#/samples/numerictextbox">Numeric TextBox</a>    <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/slider">Slider</a>                     <br>
+                   <img src="images/blue.png">
+                   <a href="#/samples/timepicker">TimePicker</a>             <br>
+                   <a>Upload</a>                                             <br>
+                   <a>Switch</a>                                             <br>
               </div>
 
               <div class="col-xs-12 col-sm-2">
-                  CHARTS                                            <br>
+                  CHARTS                                                     <br>
                   <img src="images/blue.png">
                   <a href="#/samples/area-charts">Area Charts</a>            <br>
                   <img src="images/blue.png">
@@ -89,11 +91,11 @@
                   <img src="images/blue.png">
                   <a href="#/samples/bubble-charts">Bubble Charts</a>        <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/bullet-charts">Bullet Charts</a>         <br>
+                  <a href="#/samples/bullet-charts">Bullet Charts</a>        <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/donut-charts">Donut Charts</a>           <br>
+                  <a href="#/samples/donut-charts">Donut Charts</a>          <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/funnel-charts">Funnel Charts</a>         <br>
+                  <a href="#/samples/funnel-charts">Funnel Charts</a>        <br>
                   <img src="images/blue.png">
                   <a href="#/samples/line-charts">Line Charts</a>            <br>
                   <img src="images/blue.png">
@@ -111,60 +113,61 @@
                   <img src="images/blue.png">
                   <a href="#/samples/stock">Stock Charts</a>                 <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/treemap">TreeMap</a>                            <br>
+                  <a href="#/samples/treemap">TreeMap</a>                    <br>
                   <img src="images/blue.png">
                   <a href="#/samples/waterfall-charts">Waterfall Charts</a>  <br>
                   <br>
-                  GAUGES                                             <br>
-                  <a>Linear Gauge</a>                       <br>
-                  <a>Radial Gauge</a>                       <br>
+                  GAUGES                                                     <br>
+                  <a>Linear Gauge</a>                                        <br>
+                  <a>Radial Gauge</a>                                        <br>
               </div>
 
               <div class="col-xs-12 col-sm-2">
-                  BARCODES                                           <br>
-                  <a>Barcode</a>                            <br>
-                  <a>QR Code</a>                            <br>
+                  BARCODES                                                   <br>
+                  <a>Barcode</a>                                             <br>
+                  <a>QR Code</a>                                             <br>
                   <br>
-                  DIAGRAMS & MAPS                                    <br>
-                  <a>Diagram</a>                            <br>
-                  <a>Map</a>                                <br>
+                  DIAGRAMS & MAPS                                            <br>
+                  <a>Diagram</a>                                             <br>
+                  <a>Map</a>                                                 <br>
                   <br>
-                  SCHEDULING                                         <br>
-                  <a>Calendar</a>                           <br>
-                  <a>Gantt</a>                              <br>
+                  SCHEDULING                                                 <br>
+                  <a>Calendar</a>                                            <br>
+                  <a>Gantt</a>                                               <br>
+                  <img src="images/blue.png">
                   <a href="#/samples/scheduler">Scheduler</a>                <br>
-                  <a></a>                                   <br>
+                  <a></a>                                                    <br>
               </div>
 
               <div class="col-xs-12 col-sm-2">
-                  LAYOUT                                             <br>
-                  <a>Notification</a>                       <br>
-                  <a>Responsive Panel</a>                   <br>
-                  <a>Splitter</a>                           <br>
-                  <a>Tooltip</a>                            <br>
-                  <a>Window</a>                             <br>
+                  LAYOUT                                                     <br>
+                  <a>Notification</a>                                        <br>
+                  <a>Responsive Panel</a>                                    <br>
+                  <a>Splitter</a>                                            <br>
+                  <a>Tooltip</a>                                             <br>
+                  <a>Window</a>                                              <br>
                   <br>
-                  NAVIGATION                                         <br>
+                  NAVIGATION                                                 <br>
                   <img src="images/blue.png">
                   <a href="#/samples/button">Button</a>                      <br>
-                  <a>ButtonGroup</a>                        <br>
+                  <a>ButtonGroup</a>                                         <br>
                   <img src="images/orange.png">
-                  <a>Menu</a>                               <br>
-                  <a>PanelBar</a>                           <br>
+                  <a>Menu</a>                                                <br>
+                  <a>PanelBar</a>                                            <br>
                   <img src="images/orange.png">
                   <a href="#/samples/tabstrip">TabStrip</a>                  <br>
                   <img src="images/orange.png">
                   <a href="#/samples/toolbar">ToolBar</a>                    <br>
                   <img src="images/blue.png">
-                  <a href="#/samples/treeview">TreeView</a>                           <br>
+                  <a href="#/samples/treeview">TreeView</a>                  <br>
                   <br>
-                  INTERACTIVITY &amp; UX                             <br>
-                  <a>Drag &amp; Drop</a>                    <br>
-                  <a>Effects</a>                            <br>
+                  INTERACTIVITY &amp; UX                                     <br>
+                  <a>Drag &amp; Drop</a>                                     <br>
+                  <a>Effects</a>                                             <br>
                   <img src="images/blue.png">
                   <a href="#/samples/progressbar">ProgressBar</a>            <br>
-                  <a>Sortable</a>                           <br>
-                  <a>Styling</a>                            <br>
+                  <a>Sortable</a>                                            <br>
+                  <a>Styling</a>                                             <br>
                </div>
            </div>
 
