chore(sample): update Project status by adding calendar

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -132,7 +132,8 @@
                   <a>Map</a>                                                 <br>
                   <br>
                   SCHEDULING                                                 <br>
-                  <a>Calendar</a>                                            <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/calendar">Calendar</a>                  <br>
                   <a>Gantt</a>                                               <br>
                   <img src="images/blue.png">
                   <a href="#/samples/scheduler">Scheduler</a>                <br>
