--- a/sample/index.html
+++ b/sample/index.html
@@ -22,6 +22,7 @@
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
+    <script src="http://kendo.cdn.telerik.com/2016.1.112/js/jszip.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
